[metadata]
name = shakenfist-utilities
summary = Shaken Fist utility libraries
license = Apache2
description_file = README.md
author = Michael Still
author_email = mikal@stillhq.com
home_page = https://github.com/shakenfist/library-utilities
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3

[files]
packages =
    shakenfist_utilities

[pbr]
skip_changelog = True
